--- a/pages/about.html
+++ b/pages/about.html
@@ -50,21 +50,20 @@ window.onload = function ()
   </div>
 </header>
 <article>
-  <h1 class="t_nav"><span>像“草根”一样，紧贴着地面，低调的存在，冬去春来，枯荣无恙。</span><a href="../index.html" class="n1">网站首页</a><a href="javaScript:void(0)" class="n2">关于我</a></h1>
+  <h1 class="t_nav"><span>不忘初心，方得始终</span><a href="../index.html" class="n1">网站首页</a><a href="javaScript:void(0)" class="n2">关于我</a></h1>
   <div class="ab_box">
     <div class="leftbox">
       <div class="newsview">
         <div class="news_infos">
-          <p>王浩东，男，一个96后草根！09年入行。一直潜心研究web前端技术，一边工作一边积累经验，分享一些个人博客模板，以及SEO优化等心得。我入行早，大家也亲切的叫我&ldquo;青姐&rdquo;。<br />
+          <p>王浩东，男，一个96后草根！2017年毕业于山西农业大学，之后就职于山西梦科网络科技有限公司。<br />
+            目前已经辞职，新公司待定。<br />
+            截止到现在2019年05月23日，已经毕业两年了，这两年，风里雨里，不断拼搏<br />
             <br />
-            SEO奋斗了将近两年时间，个人博客网站百度排名也从之前的30页后，排到了第一页。期间有很多的不容易，但是都没有放弃过。入了这一行，就深深的喜欢上它。我喜欢一句话&ldquo;冥冥中该来则来，无处可逃&rdquo;。<br />
-            <br />
-            近几年我也发现个人博客排前几页的也有很多是我做过的模板，感谢各位站长的欣赏，我仔细看过他们的网站。他们在我原模板的基础上有修改，而且他们做的原创内容都是值得一读的。有时候甚至排名都超过了我个人博客网站的排名。<br />
-            <br />
-            现在很多人向我请教如何做好SEO，我想说的是，一是&ldquo;代码&rdquo;，一定要简单，布局要合理。二是&ldquo;内容&rdquo;，一定要有原创，伪原创也是可以的。三是&ldquo;持续&rdquo;，这是一个持续性过程，一定要有耐心，SEO不是马上生效的。<br />
-            <br />
-            自从入了这一行，也交到了不少朋友，QQ群也不断的壮大起来，280998807(交流群 <span style="color:#FF0000;">已满员</span>)&nbsp; 280998843（技术群），群里的小伙伴们也很积极的帮助新朋友解决问题，如果你想加入我们，这个大家庭的门，永远给你敞开！另外微信群已于2018.4.13日开通（已满100，只接受群主邀请，可加我个人微信进群 。我的个人微信号 yangqq_1987）</p>
-          <br />
+            本人对网络编程有着极大的兴趣，并且一直专注于这个行业，目前主要方向为Java后端开发。本博客也只是用了一点前端的知识搭建起来。<br />
+            本人闲暇时光还使用易语言开发一些自己使用的小工具，我会在本博客中免费分享<br />
+            同时也会分享自己在开发过程中遇到的一些使用的开发技巧<br />
+            慢生活里就记录一下自己的点点滴滴，乐于生活，热爱工作。<br />
+            如果想要和我深入交流探讨，请扫描右侧的微信二维码添加本人</p>
           <h2>关于本站</h2>
           &nbsp;
           <p>域 名：www.haydon.top 创建于2019年05月18日&nbsp;</p>
