--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ window.onload = function ()
       <ul>
  <li><a href="index.html">网站首页</a></li>
         <li><a href="pages/about.html">关于我</a></li>
-		<li><a href="pages/gbook.html">技术贴</a></li>
+		<li><a href="pages/technology.html">技术贴</a></li>
         <li><a href="pages/info.html">慢生活</a></li>
       </ul>
     </div>
@@ -44,7 +44,7 @@ window.onload = function ()
       <ul>
         <li><a href="index.html">网站首页</a></li>
         <li><a href="pages/about.html">关于我</a></li>
-		<li><a href="pages/gbook.html">技术贴</a></li>
+		<li><a href="pages/technology.html">技术贴</a></li>
         <li><a href="pages/info.html">慢生活</a></li>
         
       </ul>
