--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,7 @@ window.onload = function ()
       <ul>
         <li><a href="../index.html">网站首页</a></li>
         <li><a href="about.html">关于我</a></li>
-        <li><a href="gbook.html">技术贴</a></li>
+        <li><a href="technology.html">技术贴</a></li>
         <li><a href="info.html">慢生活</a></li>
       </ul>
     </div>
@@ -43,7 +43,7 @@ window.onload = function ()
       <ul>
         <li><a href="../index.html">网站首页</a></li>
         <li><a href="about.html">关于我</a></li>
-        <li><a href="gbook.html">技术贴</a></li>
+        <li><a href="technology.html">技术贴</a></li>
         <li><a href="info.html">慢生活</a></li>
       </ul>
     </nav>
@@ -63,6 +63,7 @@ window.onload = function ()
             本人闲暇时光还使用易语言开发一些自己使用的小工具，我会在本博客中免费分享<br />
             同时也会分享自己在开发过程中遇到的一些使用的开发技巧<br />
             慢生活里就记录一下自己的点点滴滴，乐于生活，热爱工作。<br />
+            <br />
             如果想要和我深入交流探讨，请扫描右侧的微信二维码添加本人</p>
           <h2>关于本站</h2>
           &nbsp;
@@ -82,7 +83,7 @@ window.onload = function ()
         </div>
       </div>
       <div class="weixin">
-        <h2 class="hometitle">微信关注</h2>
+        <h2 class="hometitle">个人微信</h2>
         <ul>
           <img src="../images/wx.jpg">
         </ul>
