--- a/pages/technology.html
+++ b/pages/technology.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="gb2312">
-<title>留言_杨青个人博客 - 一个站在web前端设计之路的女技术员个人博客网站</title>
-<meta name="keywords" content="个人博客,杨青个人博客,个人博客模板,杨青" />
-<meta name="description" content="杨青个人博客，是一个站在web前端设计之路的女程序员个人网站，提供个人博客模板免费资源下载的个人原创网站。" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>王浩东个人博客____不忘初心，方得始终</title>
+  <meta name="keywords" content="个人博客,王浩东个人博客" />
+  <meta name="description" content="王浩东个人博客，是一个半路出道的程序员。" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="../css/base.css" rel="stylesheet">
 <link href="../css/index.css" rel="stylesheet">
 <link href="../css/m.css" rel="stylesheet">
@@ -35,45 +35,45 @@ window.onload = function ()
       <ul>
         <li><a href="../index.html">网站首页</a></li>
         <li><a href="about.html">关于我</a></li>
-        <li><a href="share.html">模板分享</a></li>
-        <li><a href="list.html">学无止境</a></li>
+        <li><a href="technology.html">技术贴</a></li>
         <li><a href="info.html">慢生活</a></li>
-        <li><a href="gbook.html">留言</a></li>
       </ul>
     </div>
     <nav class="topnav" id="topnav">
       <ul>
         <li><a href="../index.html">网站首页</a></li>
         <li><a href="about.html">关于我</a></li>
-        <li><a href="share.html">模板分享</a></li>
-        <li><a href="list.html">学无止境</a></li>
+        <li><a href="technology.html">技术贴</a></li>
         <li><a href="info.html">慢生活</a></li>
-        <li><a href="gbook.html">留言</a></li>
       </ul>
     </nav>
   </div>
 </header>
 <article>
-  <h1 class="t_nav"><span>像“草根”一样，紧贴着地面，低调的存在，冬去春来，枯荣无恙。</span><a href="/" class="n1">网站首页</a><a href="/" class="n2">留言</a></h1>
+  <h1 class="t_nav"><span>不忘初心，方得始终</span><a href="/" class="n1">网站首页</a><a href="/" class="n2">留言</a></h1>
   <div class="ab_box">
     <div class="leftbox">
-      <div class="newsview">
-        <div class="news_infos"> 此处安装插件 </div>
-      </div>
+      <!-- 在此处编写技术文章列表 -->
+
+
+      <span>技术文章</span>
+
+
+
     </div>
     <div class="rightbox">
       <div class="aboutme">
         <h2 class="hometitle">关于我</h2>
-        <div class="avatar"> <img src="../images/avatar.jpg"> </div>
+        <div class="avatar"> <img src="../images/auther.jpg"> </div>
         <div class="ab_con">
-          <p>网名：dancesmile | 杨青</p>
-          <p>职业：Web前端设计师、网页设计 </p>
-          <p>个人微信：yangqq_1987</p>
-          <p>邮箱：dancesmiling@qq.com</p>
+          <p>英文名：haydon | 王浩东</p>
+          <p>职业：Java后端开发师 </p>
+          <p>个人微信：wz15296778721</p>
+          <p>邮箱：haydonwang@foxmail.com</p>
         </div>
       </div>
       <div class="weixin">
-        <h2 class="hometitle">微信关注</h2>
+        <h2 class="hometitle">个人微信</h2>
         <ul>
           <img src="../images/wx.jpg">
         </ul>
