--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@ window.onload = function ()
 </div>
 <article>
   <div class="blogs">
-  <!--首页文章排版-->
+    <!--首页文章排版-->
     <li> <span class="blogpic"><a href="/"><img src="images/text02.jpg"></a></span>
       <h3 class="blogtitle"><a href="/">2019.05.21，开始制作我的个人博客网站</a></h3>
       <div class="bloginfo">
         <p>用最简单的代码，实现瀑布流布局，没有繁琐的css，没有jq，只需要做到以下就可以实现瀑布流的效果。思路很简单，看成是三列布局，分别用三个ul来调用。帝国cms列表模板，...</p>
       </div>
-      <div class="autor"><span class="lm"><a href="/" title="CSS3|Html5" target="_blank" class="classname">CSS3|Html5</a></span><span class="dtime">2019-05-21</span><span class="viewnum">浏览（<a href="javaScript:void(0)">0</a>）</span><span class="readmore"><a href="/">阅读原文</a></span></div>
+      <div class="autor"><span class="lm"><a href="pages/technology.html" title="life" target="_blank" class="classname">life</a></span><span class="dtime">2019-05-21</span><span class="readmore"><a href="/">阅读原文</a></span></div>
     </li>
 
 
