--- a/pages/technology.html
+++ b/pages/technology.html
@@ -50,14 +50,21 @@ window.onload = function ()
   </div>
 </header>
 <article>
-  <h1 class="t_nav"><span>不忘初心，方得始终</span><a href="/" class="n1">网站首页</a><a href="/" class="n2">留言</a></h1>
+  <h1 class="t_nav"><span>不忘初心，方得始终</span><a href="/" class="n1">网站首页</a><a href="/" class="n2">技术贴</a></h1>
   <div class="ab_box">
     <div class="leftbox">
       <!-- 在此处编写技术文章列表 -->
 
 
       <span>技术文章</span>
-
+      <!--首页文章排版-->
+      <li> <span class="blogpic"><a href="/"><img src="images/text02.jpg"></a></span>
+        <h3 class="blogtitle"><a href="/">2019.05.21，开始制作我的个人博客网站</a></h3>
+        <div class="bloginfo">
+          <p>用最简单的代码，实现瀑布流布局，没有繁琐的css，没有jq，只需要做到以下就可以实现瀑布流的效果。思路很简单，看成是三列布局，分别用三个ul来调用。帝国cms列表模板，...</p>
+        </div>
+        <div class="autor"><span class="lm"><a href="pages/technology.html" title="life" target="_blank" class="classname">life</a></span><span class="dtime">2019-05-21</span><span class="readmore"><a href="/">阅读原文</a></span></div>
+      </li>
 
 
     </div>
@@ -82,7 +89,7 @@ window.onload = function ()
   </div>
 </article>
 <footer>
-  <p>Design by <a href="/">杨青个人博客</a> <a href="/">蜀ICP备11002373号-1</a></p>
+  <p>Design by <a href="index.html">王浩东个人博客</a></p>
 </footer>
 <script src="../js/nav.js"></script>
 </body>
