--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,7 @@ window.onload = function ()
         <li><a href="../index.html">网站首页</a></li>
         <li><a href="about.html">关于我</a></li>
         <li><a href="technology.html">技术贴</a></li>
-        <li><a href="info.html">慢生活</a></li>
+        <li><a href="life.html">慢生活</a></li>
       </ul>
     </div>
     <nav class="topnav" id="topnav">
@@ -44,7 +44,7 @@ window.onload = function ()
         <li><a href="../index.html">网站首页</a></li>
         <li><a href="about.html">关于我</a></li>
         <li><a href="technology.html">技术贴</a></li>
-        <li><a href="info.html">慢生活</a></li>
+        <li><a href="life.html">慢生活</a></li>
       </ul>
     </nav>
   </div>
