--- a/pages/life-model.html
+++ b/pages/life-model.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="gb2312">
-<title>内容页_杨青个人博客 - 一个站在web前端设计之路的女技术员个人博客网站</title>
-<meta name="keywords" content="个人博客,杨青个人博客,个人博客模板,杨青" />
-<meta name="description" content="杨青个人博客，是一个站在web前端设计之路的女程序员个人网站，提供个人博客模板免费资源下载的个人原创网站。" />
+<title>王浩东个人博客____不忘初心，方得始终</title>
+<meta name="keywords" content="个人博客,王浩东个人博客" />
+<meta name="description" content="王浩东个人博客，是一个半路出道的程序员。" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="../css/base.css" rel="stylesheet">
 <link href="../css/index.css" rel="stylesheet">
@@ -30,39 +30,49 @@ window.onload = function ()
 <body>
 <header>
   <div class="tophead">
-    <div class="logo"><a href="/">杨青个人博客</a></div>
+    <div class="logo"><a href="/">王浩东个人博客</a></div>
     <div id="mnav">
       <h2><span class="navicon"></span></h2>
       <ul>
-        <li><a href="../index.html">网站首页</a></li>
-        <li><a href="about.html">关于我</a></li>
-        <li><a href="share.html">模板分享</a></li>
-        <li><a href="list.html">学无止境</a></li>
-        <li><a href="info.html">慢生活</a></li>
-        <li><a href="gbook.html">留言</a></li>
+          <li><a href="index.html">网站首页</a></li>
+          <li><a href="pages/about.html">关于我</a></li>
+      <li><a href="pages/technology.html">技术贴</a></li>
+          <li><a href="pages/life.html">慢生活</a></li>
       </ul>
     </div>
     <nav class="topnav" id="topnav">
       <ul>
-        <li><a href="../index.html">网站首页</a></li>
-        <li><a href="about.html">关于我</a></li>
-        <li><a href="share.html">模板分享</a></li>
-        <li><a href="list.html">学无止境</a></li>
-        <li><a href="info.html">慢生活</a></li>
-        <li><a href="gbook.html">留言</a></li>
+          <li><a href="index.html">网站首页</a></li>
+          <li><a href="pages/about.html">关于我</a></li>
+      <li><a href="pages/technology.html">技术贴</a></li>
+          <li><a href="pages/life.html">慢生活</a></li>
       </ul>
     </nav>
   </div>
 </header>
+
+
+<!-- 此为慢生活文章模板 -->
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 慢生活 > 程序人生</span><a href="/" class="n1">网站首页</a><a href="/" class="n2">慢生活</a></h1>
-  <!-- <div class="infos"> -->
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 慢生活 > 程序人生</span><a href="../index.html" class="n1">网站首页</a><a href="life.html" class="n2">慢生活</a></h1>
+
     <div class="newsview">
+      <!-- 文章标题 -->
       <h3 class="news_title">个人博客，属于我的小世界！</h3>
-      <div class="news_author"><span class="au01"><a href="mailto:dancesmiling@qq.com">杨青</a></span><span class="au02">2018-04-27</span><span class="au03">共<b><script src="/e/public/ViewClick/?classid=5&amp;id=816&amp;addclick=1"></script>1833</b>人围观</span></div>
-      <div class="tags"><a href="/e/tags/?tagname=%B8%F6%C8%CB%B2%A9%BF%CD&amp;tempid=13" target="_blank">个人博客</a> &nbsp; <a href="/e/tags/?tagname=%D0%A1%CA%C0%BD%E7&amp;tempid=13" target="_blank">小世界</a></div>
+      <!-- 作者与更新时间 -->
+      <div class="news_author"><span class="au01"><a href="mailto:haydonwang@foxmail.com">王浩东</a></span><span class="au02">2018-04-27</span></div>
+      <!-- 文章所属类型  多标签可进行复制  最后一个不带  &nbsp; 这个 -->
+      <div class="tags">
+        <a href="javaScript:void(0)" target="_blank">个人博客</a> &nbsp; 
+        <a href="javaScript:void(0)" target="_blank">小世界</a>
+      </div>
+
+      <!-- 本文中心思想简介 -->
       <div class="news_about"><strong>简介</strong>个人博客，用来做什么？我刚开始就把它当做一个我吐槽心情的地方，也就相当于一个网络记事本，写上一些关于自己生活工作中的小情小事，也会放上一些照片，音乐。每天工作回家后就能访问自己的网站，一边听着音乐，一边写写文章。</div>
-      <div class="news_infos"> 本文很长，记录了我博客建站初到现在的过程，还有我从毕业到现在的一个状态，感谢您的阅读，如果你还是学生，也许你能从此文中，找到我们曾经相似的地方。如果你已经工作，有自己的博客，我想，你并没有忘记当初建立个人博客的初衷吧！<br>
+      
+      <!-- 文章正文部分  用br标签进行换行 -->
+      <div class="news_infos"> 
+               本文很长，记录了我博客建站初到现在的过程，还有我从毕业到现在的一个状态，感谢您的阅读，如果你还是学生，也许你能从此文中，找到我们曾经相似的地方。如果你已经工作，有自己的博客，我想，你并没有忘记当初建立个人博客的初衷吧！<br>
         <br>
         我的个人博客已经建站有8年的时间了，对它的热爱，一直都是只增未减。回想大学读书的那几年，那会儿非常流行QQ空间，我们寝室的室友还经常邀约去学校的网吧做自己的空间。系里有个男生，空间做得非常漂亮，什么悬浮，开场动画，音乐播放器，我们女生羡慕得不得了。还邀约他跟我们一起去通宵弄空间，网上可以找到很多免费的flash资源，还有音乐，那也是第一次接触js，知道在浏览器输入一个地址，修改一下数据，就能调用一些背景出来。然后把自己QQ空间弄得漂漂亮亮的，经常邀约室友来互踩。我记得08年地震，第二天晚上，我们寝室的几个人还淡定的在寝室装扮空间呢！<br>
         <br>
@@ -92,7 +102,7 @@ window.onload = function ()
         <br>
         我的个人博客，在今年三月份之前是没有提供后台安装，调试这些服务的。其实一直都有人找我做个人博客，因为调试时间还有修改的问题，从上传到安装到修改调试，一般要四五个小时，我怕收费高，所以一直都是拒绝的。自从推出来《<u><a href="http://www.yangqq.com/download/div/2017-09-08/789.html" target="_blank">心蓝时间轴</a></u>》后，主动找我做网站的也多了，他们都说是我粉丝，喜欢我的模板，所以我在模板下面写了付费说明，我的个人博客也开始有了付费项目。<br>
         <br>
-        <img alt="" src="../images/bi06.jpg"><br>
+        <img alt="" src="../images/bi06.jpg" ><br>
         <br>
         我接到的第一单，是一位父亲，想给自家的宝贝建立一个博客。他说他想买一个域名，谈了好几天，最终花了8000多购买到，我挺敬佩他的，对孩子的爱，毫不吝啬。域名固然重要，其实我想说坚持用博客来记录宝贝成长点滴，才是最有价值的。第二单是一个阅读网站，从加他到跟他聊，看他朋友圈，很有才气的一个人，也相当有爱心，他的网站大部分是分享给一些爱好阅读的长者。还有些就是技术类的站长，做资讯，做旅游，做推广的。通常，从选的模板就能看出来网站类型。《<u><a href="http://www.yangqq.com/download/div/2017-09-08/789.html">心蓝时间轴</a></u>》偏个人，《<u><a href="http://www.yangqq.com/download/div/2018-03-18/807.html">绅士</a></u>》，《<u><a href="http://www.yangqq.com/download/div/2018-04-22/815.html" target="_blank">格调</a></u>》偏技术，资讯。《<u><a href="http://www.yangqq.com/download/div/2018-04-18/814.html" target="_blank">清雅</a></u>》，《<u><a href="http://www.yangqq.com/download/div/2017-07-16/785.html" target="_blank">水墨古典</a></u>》偏文艺。但也有对我防备心的，比如说付款方式，能不能走淘宝，这些我也能理解，但是有些吧，从一开始聊，感觉就不太好，理应就认为不应该收钱，收钱干嘛，到处都是免费的，听到这些，我也慢慢解释。其实他们并不了解我，了解我的网站，只要是从我博客来的，关注过一段时间的，都知道青姐的人品是咋样的。用“心塞”这个词，毫不为过吧。<br>
         <br>
@@ -100,19 +110,23 @@ window.onload = function ()
         <br>
         &nbsp; </div>
     </div>
+
+
+    <!-- 上一篇与下一篇更改位置 -->
     <div class="share"> </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="/news/life/2018-03-13/804.html">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></p>
-      <p>下一篇：<a href="/news/life/">返回列表</a></p>
+      <p>上一篇：<a href="/news/life/2018-03-13/804.html">上一篇文章的名称</a></p>
+      <p>下一篇：<a href="/news/life/">下一篇文章的名称</a></p>
+      <p><a href="life.html">返回列表</a></p>
     </div>
 
-  
-  <!-- </div> -->
+ 
+
  
 
 </article>
 <footer>
-  <p>Design by <a href="/">杨青个人博客</a> <a href="/">蜀ICP备11002373号-1</a></p>
+    <p>Design by <a href="/">王浩东个人博客</a> </p>
 </footer>
 <script src="../js/nav.js"></script>
 <script type="text/javascript">
