--- a/pages/technology.html
+++ b/pages/technology.html
@@ -29,14 +29,14 @@ window.onload = function ()
 <body>
 <header>
   <div class="tophead">
-    <div class="logo"><a href="/">杨青个人博客</a></div>
+    <div class="logo"><a href="/">王浩东个人博客</a></div>
     <div id="mnav">
       <h2><span class="navicon"></span></h2>
       <ul>
         <li><a href="../index.html">网站首页</a></li>
         <li><a href="about.html">关于我</a></li>
         <li><a href="technology.html">技术贴</a></li>
-        <li><a href="info.html">慢生活</a></li>
+        <li><a href="life.html">慢生活</a></li>
       </ul>
     </div>
     <nav class="topnav" id="topnav">
@@ -44,7 +44,7 @@ window.onload = function ()
         <li><a href="../index.html">网站首页</a></li>
         <li><a href="about.html">关于我</a></li>
         <li><a href="technology.html">技术贴</a></li>
-        <li><a href="info.html">慢生活</a></li>
+        <li><a href="life.html">慢生活</a></li>
       </ul>
     </nav>
   </div>
