--- a/pages/life.html
+++ b/pages/life.html
@@ -29,7 +29,7 @@ window.onload = function ()
 <body>
 <header>
   <div class="tophead">
-    <div class="logo"><a href="/">杨青个人博客</a></div>
+    <div class="logo"><a href="/">王浩东个人博客</a></div>
     <div id="mnav">
       <h2><span class="navicon"></span></h2>
       <ul>
