--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@ window.onload = function ()
       <div class="avatar"> <img src="images/auther.jpg" alt=""> </div>
       <p class="abname">haydon | 王浩东</p>
       <p class="abposition">java后端程序员</p>
-      <div class="abtext"> 一个96年的小孩子 <br/>一入java深似海，从此头发是路人。 </div>
+      <div class="abtext"> 一个96年的小孩子a <br/>一入java深似海，从此头发是路人。 </div>
     </div>
+
 
   <!--  搜索框
     <div class="search">
