--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@ window.onload = function ()
     <!--首页文章排版-->
     <li> <span class="blogpic"><a href="/"><img src="images/text02.jpg"></a></span>
       <h3 class="blogtitle"><a href="/">2019.05.21，开始制作我的个人博客网站</a></h3>
-      <div class="bloginfo">
-        <p>用最简单的代码，实现瀑布流布局，没有繁琐的css，没有jq，只需要做到以下就可以实现瀑布流的效果。思路很简单，看成是三列布局，分别用三个ul来调用。帝国cms列表模板，...</p>
-      </div>
-      <div class="autor"><span class="lm"><a href="pages/technology.html" title="life" target="_blank" class="classname">life</a></span><span class="dtime">2019-05-21</span><span class="readmore"><a href="/">阅读原文</a></span></div>
+      <h3 class="blogtitle"><a href="/">我的第一篇博客</a></h3>
+          <div class="bloginfo">
+            <p>终于搭建好自己的博客网站了，先发布一篇来纪念一下吧，以后，我将会在这里分享我的生活，工作经验，还有一些有用的软件...</p>
+          </div>
+          <div class="autor"><span class="lm"><a href="pages/life.html" title="life" target="_blank" class="classname">life</a></span><span class="dtime">2019-05-26</span><span class="readmore"><a href="pages/life/life1901.html">阅读原文</a></span></div>
     </li>
 
 
