修改一些超链接

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@ window.onload = function ()
 <article>
   <div class="blogs">
     <!--首页文章排版-->
-    <li> <span class="blogpic"><a href="/"><img src="images/text02.jpg"></a></span>
-      <h3 class="blogtitle"><a href="/">2019.05.21，开始制作我的个人博客网站</a></h3>
-      <h3 class="blogtitle"><a href="/">我的第一篇博客</a></h3>
+    <li> <span class="blogpic"><a href="pages/life/life1901.html"><img src="images/text02.jpg"></a></span>
+      <h3 class="blogtitle"><a href="pages/life/life1901.html">我的第一篇博客</a></h3>
           <div class="bloginfo">
             <p>终于搭建好自己的博客网站了，先发布一篇来纪念一下吧，以后，我将会在这里分享我的生活，工作经验，还有一些有用的软件...</p>
           </div>
