--- a/pages/life.html
+++ b/pages/life.html
@@ -58,7 +58,7 @@ window.onload = function ()
 
         <!--慢生活文章排版-->
         <li> <span class="blogpic"></span>
-          <h3 class="blogtitle"><a href="/">我的第一篇博客</a></h3>
+          <h3 class="blogtitle"><a href="life/life1901.html">我的第一篇博客</a></h3>
           <div class="bloginfo">
             <p>终于搭建好自己的博客网站了，先发布一篇来纪念一下吧，以后，我将会在这里分享我的生活，工作经验，还有一些有用的软件...</p>
           </div>
